[package]
name = "dircontribmap"
version = "0.1.0"
edition = "2021"

[dependencies]
librclone = "0.5"
serde = { version = "1.0", features =["derive"]}
serde_json = "1.0.103"
tempfile = "3.7.0"
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.26", features = ["serde"]}
